--- a/config/sync/config_ignore.settings.yml
+++ b/config/sync/config_ignore.settings.yml
@@ -1,7 +1,7 @@
 ignored_config_entities:
-  0: 'webform.webform.*'
-  2: 'xmlsitemap.*'
-  4: xmlsitemap_engines.settings
-  6: system.performance.yml
+  - 'webform.webform.*'
+  - 'xmlsitemap.*'
+  - xmlsitemap_engines.settings
+  - system.performance.yml
 _core:
   default_config_hash: UVH1aJ4b44UM-VdPVN7hNNuuVqfReJxwfVeDQH1Hvsk
