--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
       "type": "package",
       "package": {
         "name": "electriccitizen/docksal",
-        "version": "1.3.1",
+        "version": "1.4.3",
         "type": "drupal-custom-module",
         "source": {
           "url": "https://github.com/electriccitizen/docksal.git",
           "type": "git",
-          "reference": "1.3.1"
+          "reference": "1.4.3"
         }
       }
     }
@@ -30,7 +30,7 @@
     "drupal-composer/drupal-scaffold": "^2.0.1",
     "drupal/addanother": "^1.0@RC",
     "drupal/addtoany": "~1",
-    "drupal/admin_toolbar": "~1",
+    "drupal/admin_toolbar": "1.27",
     "drupal/antibot": "^1.2",
     "drupal/auto_entitylabel": "^3.0@beta",
     "drupal/components": "^1.0",
@@ -186,10 +186,10 @@
         "Enable link functionality on menu block titles": "https://www.drupal.org/files/issues/menu_block-title_as_link-1-d8.patch"
       },
       "drupal/entity_embed": {
-        "Array to string conversion for Media Image": "https://www.drupal.org/files/issues/2019-09-02/entity-embed-array-to-string--3069448-17.patch"
+        "Array to string conversion for Media Image": "https://www.drupal.org/files/issues/2019-10-18/entity-embed-array-to-string--3069448-19.patch"
       },
       "drupal/paragraphs": {
-        "Call to member function missing label": "https://www.drupal.org/files/issues/2019-08-08/paragraphs-call_id_on_null-2948778-15.patch"
+        "Call to member function missing label": "https://www.drupal.org/files/issues/2020-01-14/paragraphs-call_id_on_null-2948778-20.patch"
       }
     },
     "enable-patching": true
