--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
     }
   ],
     "require": {
-    "composer/installers": "^1.6",
+    "composer/installers": "^1.7",
     "cweagans/composer-patches": "^1.0",
     "doctrine/lexer": "1.0.2",
     "drupal-composer/drupal-scaffold": "^2.0.1",
     "drupal/addanother": "^1.0@RC",
     "drupal/addtoany": "~1",
-    "drupal/admin_toolbar": "1.27",
+    "drupal/admin_toolbar": "^2.0",
     "drupal/antibot": "^1.2",
     "drupal/auto_entitylabel": "^3.0@beta",
     "drupal/components": "^1.0",
@@ -42,7 +42,8 @@
     "drupal/config_update": "^1.5",
     "drupal/console": "^1.8.0",
     "drupal/console-core": "^1.8.0",
-    "drupal/core": "~8.7.11",
+    "drupal/core-project-message": "^8.8",
+    "drupal/core-recommended": "^8.8",
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
     "drupal/default_content": "^1.0.0@alpha",
@@ -94,9 +95,7 @@
     "electriccitizen/docksal": "~1",
     "geerlingguy/drupal-vm": "^4.7",
     "rvtraveller/qs-composer-installer": "^1.1",
-    "webflo/drupal-core-strict": "^8",
-    "webflo/drupal-finder": "^1.0",
-    "wikimedia/composer-merge-plugin": "~1.3"
+    "webflo/drupal-finder": "^1.0"
   },
   "require-dev": {
     "mikey179/vfsstream": "^1.2",
