Adding config changes from update to Drupal 8.8

--- a/config/local/stage_file_proxy.settings.yml
+++ b/config/local/stage_file_proxy.settings.yml
@@ -1,4 +1,4 @@
-hotlink: true
+hotlink: false
 origin: 'http://dev-newupstream.pantheonsite.io'
 origin_dir: sites/default/files
 use_imagecache_root: true
