--- a/config/sync/views.view.citizen_media.yml
+++ b/config/sync/views.view.citizen_media.yml
@@ -24,7 +24,6 @@ description: ''
 tag: ''
 base_table: media_field_data
 base_field: mid
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -434,6 +433,8 @@ display:
               senior_editor: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -477,6 +478,8 @@ display:
               senior_editor: '0'
               editor: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -520,6 +523,8 @@ display:
               senior_editor: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -877,6 +882,8 @@ display:
               senior_editor: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -920,6 +927,8 @@ display:
               senior_editor: '0'
               editor: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -963,6 +972,8 @@ display:
               senior_editor: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1007,6 +1018,8 @@ display:
             remember_roles:
               authenticated: authenticated
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1074,6 +1087,8 @@ display:
               senior_editor: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1117,6 +1132,8 @@ display:
               senior_editor: '0'
               editor: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1160,6 +1177,8 @@ display:
               senior_editor: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1414,6 +1433,8 @@ display:
               senior_editor: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1457,6 +1478,8 @@ display:
               senior_editor: '0'
               editor: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1500,6 +1523,8 @@ display:
               senior_editor: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1757,6 +1782,8 @@ display:
               senior_editor: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1800,6 +1827,8 @@ display:
               senior_editor: '0'
               editor: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -1843,6 +1872,8 @@ display:
               senior_editor: '0'
               editor: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
