--- a/config/sync/views.view.site_search.yml
+++ b/config/sync/views.view.site_search.yml
@@ -15,7 +15,6 @@ description: ''
 tag: ''
 base_table: search_api_index_nodes
 base_field: search_api_id
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -241,6 +240,8 @@ display:
               senior_editor: '0'
               editor: '0'
             placeholder: 'Enter keyword(s)'
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -283,7 +284,18 @@ display:
             label: ''
           plugin_id: search_api
       title: 'Site Search'
-      header: {  }
+      header:
+        area_text_custom:
+          id: area_text_custom
+          table: views
+          field: area_text_custom
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: false
+          content: '<h2 class="results-header">Search Results</h2>'
+          plugin_id: text_custom
       footer:
         result:
           id: result
