--- a/config/sync/views.view.user_dashboard.yml
+++ b/config/sync/views.view.user_dashboard.yml
@@ -12,7 +12,6 @@ description: 'Logged In User Dashboard Blocks'
 tag: ''
 base_table: users_field_data
 base_field: uid
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -308,6 +307,8 @@ display:
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
