--- a/config/sync/views.view.paragraphs_library.yml
+++ b/config/sync/views.view.paragraphs_library.yml
@@ -17,7 +17,6 @@ description: ''
 tag: ''
 base_table: paragraphs_library_item_field_data
 base_field: id
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -591,6 +590,8 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: Label
@@ -635,6 +636,8 @@ display:
               anonymous: '0'
               administrator: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -673,6 +676,8 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -711,6 +716,8 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
