--- a/config/sync/views.view.paragraphs_library_browser.yml
+++ b/config/sync/views.view.paragraphs_library_browser.yml
@@ -15,7 +15,6 @@ description: ''
 tag: ''
 base_table: paragraphs_library_item_field_data
 base_field: id
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -460,6 +459,8 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: Label
@@ -504,6 +505,8 @@ display:
               anonymous: '0'
               administrator: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -542,6 +545,8 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -580,6 +585,8 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
