--- a/config/sync/views.view.redirect.yml
+++ b/config/sync/views.view.redirect.yml
@@ -15,7 +15,6 @@ description: 'List of redirects'
 tag: ''
 base_table: redirect
 base_field: rid
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -405,6 +404,8 @@ display:
               anonymous: '0'
               administrator: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -446,6 +447,8 @@ display:
               anonymous: '0'
               administrator: '0'
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
@@ -492,6 +495,8 @@ display:
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: true
           group_info:
             label: 'Status code'
@@ -582,6 +587,8 @@ display:
               anonymous: '0'
               administrator: '0'
             reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
