--- a/config/sync/webform.settings.yml
+++ b/config/sync/webform.settings.yml
@@ -1,6 +1,7 @@
 settings:
   default_status: open
   default_page_base_path: form
+  default_ajax: false
   default_ajax_effect: fade
   default_ajax_speed: 500
   default_ajax_progress_type: throbber
@@ -84,6 +85,8 @@ assets:
   javascript: ''
 handler:
   excluded_handlers: {  }
+variant:
+  excluded_variants: {  }
 export:
   temp_directory: ''
   exporter: delimited
@@ -116,7 +119,11 @@ batch:
   default_batch_email_size: 500
 purge:
   cron_size: 100
+form:
+  filter_category: ''
+  filter_state: ''
 element:
+  machine_name_pattern: a-z0-9_
   empty_message: '{Empty}'
   allowed_tags: admin
   wrapper_classes: "container-inline clearfix\nform--inline clearfix\nmessages messages--error\nmessages messages--warning\nmessages messages--status\n"
@@ -128,14 +135,13 @@ element:
   default_empty_option: true
   default_empty_option_required: ''
   default_empty_option_optional: ''
-  default_icheck: ''
-  default_google_maps_api_key: ''
   default_algolia_places_app_id: ''
   default_algolia_places_api_key: ''
   excluded_elements:
     password: password
     password_confirm: password_confirm
-    webform_location_geocomplete: webform_location_geocomplete
+  default_icheck: ''
+  default_google_maps_api_key: ''
 html_editor:
   disabled: false
   element_format: ''
@@ -173,12 +179,12 @@ test:
   names: "first_name:\r\n  - 'John'\r\n  - 'Paul'\r\n  - 'Ringo'\r\n  - 'George'\r\nlast_name:\r\n  - 'Lennon'\r\n  - 'McCartney'\r\n  - 'Starr'\r\n  - 'Harrison'\r\naddress:\r\n  - '10 Main Street'\r\n  - '11 Brook Alley Road. APT 1'\r\nzip:\r\n  - '11111'\r\n  - '12345'\r\n  - '12345-6789'\r\nphone:\r\n  - '123-456-7890'\r\n  - '098-765-4321'\r\ncity:\r\n  - 'Springfield'\r\n  - 'Pleasantville'\r\n  - 'Hill Valley'\r\nurl:\r\n  - 'http://example.com'\r\n  - 'http://test.com'\r\ndefault:\r\n  - 'Loremipsum'\r\n  - 'Oratione'\r\n  - 'Dixisset'\r\n"
 ui:
   video_display: dialog
-  description_help: true
   details_save: true
   help_disabled: false
   dialog_disabled: false
   offcanvas_disabled: false
   promotions_disabled: false
+  description_help: true
 libraries:
   excluded_libraries:
     - jquery.chosen
