--- a/config/sync/webform.webform.contact.yml
+++ b/config/sync/webform.webform.contact.yml
@@ -14,7 +14,7 @@ id: contact
 title: Contact
 description: 'Basic email contact webform.'
 category: ''
-elements: "name:\n  '#type': textfield\n  '#title': Name\n  '#title_display': inline\n  '#maxlength': '60'\n  '#required': true\nemail:\n  '#type': email\n  '#title': 'Your Email'\n  '#title_display': inline\n  '#required': true\nsubject:\n  '#type': textfield\n  '#title': Subject\n  '#title_display': inline\n  '#required': true\n  '#test': 'Testing contact webform from [site:name]'\nmessage:\n  '#type': textarea\n  '#title': Message\n  '#title_display': inline\n  '#required': true\n  '#test': 'Please ignore this email.'\n"
+elements: "name:\n  '#type': textfield\n  '#title': Name\n  '#title_display': inline\n  '#maxlength': 60\n  '#required': true\nemail:\n  '#type': email\n  '#title': 'Your Email'\n  '#title_display': inline\n  '#required': true\nsubject:\n  '#type': textfield\n  '#title': Subject\n  '#title_display': inline\n  '#required': true\n  '#test': 'Testing contact webform from [site:name]'\nmessage:\n  '#type': textarea\n  '#title': Message\n  '#title_display': inline\n  '#required': true\n  '#test': 'Please ignore this email.'\n"
 css: ''
 javascript: ''
 settings:
@@ -128,6 +128,7 @@ settings:
   purge_days: null
   results_disabled: false
   results_disabled_ignore: false
+  results_customize: false
   token_view: false
   token_update: false
   form_submit_label: 'Send message'
