--- a/web/modules/custom/citizen_preview/citizen_preview.info.yml
+++ b/web/modules/custom/citizen_preview/citizen_preview.info.yml
@@ -1,5 +1,5 @@
-name: EC Preview
-description: EC Preview Overrides
+name: Citizen Preview
+description: Citizen Preview Overrides
 type: module
 package: Custom
 core: '8.x'
