--- a/config/sync/system.date.yml
+++ b/config/sync/system.date.yml
@@ -2,9 +2,9 @@ country:
   default: US
 first_day: 0
 timezone:
-  default: UTC
+  default: America/Chicago
   user:
-    configurable: true
+    configurable: false
     warn: false
     default: 0
 _core:
