--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
     "drupal/field_group": "^3.0",
     "drupal/flippy": "1.x-dev",
     "drupal/focal_point": "^1.0",
-    "drupal/geolocation": "^1.11",
+    "drupal/geolocation": "^3.0",
     "drupal/google_analytics": "^3.0",
     "drupal/hreflang": "^1.1",
     "drupal/image_style_quality": "^1.3",
@@ -179,19 +179,15 @@
       "drupal/addanother":{
         "URL doesnt match machine name": "https://www.drupal.org/files/issues/addanother-url-doesnt-match-machine-name-2851584-3.patch"
       },
-      "drupal/menu_block": {
-        "Enable menu block by page functionality": "https://www.drupal.org/files/issues/2018-08-08/menu_block-follow-2756675-55.patch",
-        "Enable using active menus as menu block titles": "https://www.drupal.org/files/issues/menu_block-label_configuration-2809699-51.patch",
-        "Enable link functionality on menu block titles": "https://www.drupal.org/files/issues/menu_block-title_as_link-1-d8.patch"
-      },
       "drupal/entity_embed": {
         "Array to string conversion for Media Image": "https://www.drupal.org/files/issues/2019-10-18/entity-embed-array-to-string--3069448-19.patch"
       },
-      "drupal/paragraphs": {
-        "Call to member function missing label": "https://www.drupal.org/files/issues/2020-01-14/paragraphs-call_id_on_null-2948778-20.patch"
+      "drupal/menu_block": {
+        "Enable using active menus as menu block titles": "https://www.drupal.org/files/issues/menu_block-label_configuration-2809699-51.patch",
+        "Enable link functionality on menu block titles - https://www.drupal.org/project/menu_block/issues/2950943": "https://www.drupal.org/files/issues/2020-05-03/2950943-33.patch"
       },
-      "drupal/core": {
-        "Off canvas filling up localStorage's quota, causing errors": "https://www.drupal.org/files/issues/2020-02-26/3070745-25.patch"
+      "drupal/paragraphs": {
+        "Call to member function missing label - https://www.drupal.org/project/paragraphs/issues/2948778": "https://www.drupal.org/files/issues/2020-01-14/paragraphs-call_id_on_null-2948778-20.patch"
       }
     },
     "enable-patching": true
