composer to install 8.8 updates only

--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,8 @@
     "drupal/config_update": "^1.5",
     "drupal/console": "^1.8.0",
     "drupal/console-core": "^1.8.0",
-    "drupal/core-project-message": "^8.8",
-    "drupal/core-recommended": "^8.8",
+    "drupal/core-project-message": "8.8.*",
+    "drupal/core-recommended": "8.8.*",
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
     "drupal/default_content": "^1.0.0@alpha",
