--- a/config/sync/system.date.yml
+++ b/config/sync/system.date.yml
@@ -2,9 +2,9 @@ country:
   default: US
 first_day: 0
 timezone:
-  default: America/Chicago
+  default: UTC
   user:
-    configurable: false
+    configurable: true
     warn: false
     default: 0
 _core:
