--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
       "type": "package",
       "package": {
         "name": "electriccitizen/docksal",
-        "version": "1.4.3",
+        "version": "1.5.1",
         "type": "drupal-custom-module",
         "source": {
           "url": "https://github.com/electriccitizen/docksal.git",
           "type": "git",
-          "reference": "1.4.3"
+          "reference": "1.5.1"
         }
       }
     }
@@ -92,7 +92,7 @@
     "drupal/webform": "^5.1",
     "drupal/xmlsitemap": "^1.0@alpha",
     "drush/drush": "~8",
-    "electriccitizen/docksal": "~1",
+    "electriccitizen/docksal": "^1.5",
     "geerlingguy/drupal-vm": "^4.7",
     "rvtraveller/qs-composer-installer": "^1.1",
     "webflo/drupal-finder": "^1.0"
