--- a/composer.json
+++ b/composer.json
@@ -51,12 +51,12 @@
     "drupal/easy_breadcrumb": "^1.6",
     "drupal/entity": "^1.0.0-rc1",
     "drupal/entity_browser": "^2.0.0",
-    "drupal/entity_embed": "1.x-dev",
+    "drupal/entity_embed": "^1.0",
     "drupal/entity_reference_revisions": "^1.6.0",
     "drupal/entity_usage": "^2.0@beta",
     "drupal/extlink": "^1.1",
     "drupal/field_group": "^3.0",
-    "drupal/flippy": "1.x-dev",
+    "drupal/flippy": "^1.0",
     "drupal/focal_point": "^1.0",
     "drupal/geolocation": "^1.11",
     "drupal/google_analytics": "^3.0",
@@ -75,7 +75,7 @@
     "drupal/metatag": "^1.0",
     "drupal/paragraphs": "^1.8",
     "drupal/pathauto": "^1.3",
-    "drupal/pathologic": "1.x-dev",
+    "drupal/pathologic": "^1.0",
     "drupal/quicklink": "^1.1",
     "drupal/redirect": "^1.3",
     "drupal/responsive_preview": "^1.0@beta",
@@ -176,19 +176,12 @@
       }
     },
     "patches": {
-      "drupal/core": {
-        "Off canvas filling up localStorage's quota, causing errors": "https://www.drupal.org/files/issues/2020-02-26/3070745-25.patch"
-      },
       "drupal/entity_embed": {
         "Array to string conversion for Media Image": "https://www.drupal.org/files/issues/2019-10-18/entity-embed-array-to-string--3069448-19.patch"
       },
       "drupal/menu_block": {
-        "Enable menu block by page functionality": "https://www.drupal.org/files/issues/2018-08-08/menu_block-follow-2756675-55.patch",
         "Enable using active menus as menu block titles": "https://www.drupal.org/files/issues/menu_block-label_configuration-2809699-51.patch",
         "Enable link functionality on menu block titles": "https://www.drupal.org/files/issues/menu_block-title_as_link-1-d8.patch"
-      },
-      "drupal/paragraphs": {
-        "Call to member function missing label": "https://www.drupal.org/files/issues/2020-01-14/paragraphs-call_id_on_null-2948778-20.patch"
       }
     },
     "enable-patching": true
