--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,6 @@
     "composer/installers": "^1.7",
     "cweagans/composer-patches": "^1.0",
     "doctrine/lexer": "1.0.2",
-    "drupal-composer/drupal-scaffold": "^2.0.1",
     "drupal/addanother": "^1.0@RC",
     "drupal/addtoany": "~1",
     "drupal/admin_toolbar": "^2.0",
@@ -42,8 +41,10 @@
     "drupal/config_update": "^1.5",
     "drupal/console": "^1.8.0",
     "drupal/console-core": "^1.8.0",
+    "drupal/core": "^8.9",
+    "drupal/core-composer-scaffold": "^8.9",
     "drupal/core-project-message": "^8.8",
-    "drupal/core-recommended": "^8.8",
+    "drupal/core-recommended": "^8.9",
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
     "drupal/default_content": "^1.0.0@alpha",
@@ -74,7 +75,7 @@
     "drupal/menu_block": "^1.4",
     "drupal/metatag": "^1.0",
     "drupal/paragraphs": "^1.8",
-    "drupal/pathauto": "^1.3",
+    "drupal/pathauto": "^1.6",
     "drupal/pathologic": "^1.0",
     "drupal/quicklink": "^1.1",
     "drupal/redirect": "^1.3",
@@ -173,6 +174,13 @@
       ],
       "terminus": {
         "compatible-version": "^2.0"
+      },
+      "locations": {
+        "web-root": "web/"
+      },
+      "file-mapping": {
+        "[web-root]/sites/default/default.services.yml": false,
+        "[web-root]/sites/default/default.settings.php": false
       }
     },
     "patches": {
