Switching to Drupal 10

--- a/composer.json
+++ b/composer.json
@@ -92,7 +92,7 @@
     "drupal/views_infinite_scroll": "^1.5",
     "drupal/webform": "^5.1",
     "drupal/xmlsitemap": "^1.0@alpha",
-    "drush/drush": "~8",
+    "drush/drush": "^10",
     "electriccitizen/docksal": "^1.5",
     "geerlingguy/drupal-vm": "^4.7",
     "rvtraveller/qs-composer-installer": "^1.1",
