--- a/config/sync/core.entity_view_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.default.yml
@@ -23,7 +23,8 @@ third_party_settings:
     sections:
       -
         layout_id: layout_onecol
-        layout_settings: {  }
+        layout_settings:
+          label: ''
         components:
           697f9831-8be0-4ba4-8734-cdd641a7fe10:
             uuid: 697f9831-8be0-4ba4-8734-cdd641a7fe10
@@ -39,7 +40,8 @@ third_party_settings:
         third_party_settings: {  }
       -
         layout_id: layout_onecol
-        layout_settings: {  }
+        layout_settings:
+          label: ''
         components:
           6636b530-ecca-4bda-959f-f544b04a7422:
             uuid: 6636b530-ecca-4bda-959f-f544b04a7422
@@ -80,7 +82,8 @@ third_party_settings:
         third_party_settings: {  }
       -
         layout_id: layout_onecol
-        layout_settings: {  }
+        layout_settings:
+          label: ''
         components:
           ab701efe-a35e-4a00-ab4b-8033dccc4554:
             uuid: ab701efe-a35e-4a00-ab4b-8033dccc4554
@@ -102,7 +105,8 @@ third_party_settings:
         third_party_settings: {  }
       -
         layout_id: layout_onecol
-        layout_settings: {  }
+        layout_settings:
+          label: ''
         components:
           93488de5-d12a-4299-978f-55447109f0fe:
             uuid: 93488de5-d12a-4299-978f-55447109f0fe
