--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -25,7 +25,8 @@ third_party_settings:
     sections:
       -
         layout_id: layout_onecol
-        layout_settings: {  }
+        layout_settings:
+          label: ''
         components:
           ca1122ff-a530-4198-9ab8-9bcc434bc479:
             uuid: ca1122ff-a530-4198-9ab8-9bcc434bc479
@@ -77,7 +78,8 @@ third_party_settings:
         third_party_settings: {  }
       -
         layout_id: two_column_sidebar_left
-        layout_settings: {  }
+        layout_settings:
+          label: ''
         components:
           8b5f525e-0dcc-435f-bbdf-eabc88b5e8b6:
             uuid: 8b5f525e-0dcc-435f-bbdf-eabc88b5e8b6
@@ -87,11 +89,11 @@ third_party_settings:
               label: 'In This Section'
               provider: menu_block
               label_display: visible
-              follow: 1
+              follow: true
               follow_parent: active
               level: 1
               depth: 3
-              expand: 1
+              expand: true
               parent: 'main:'
               label_type: root
               label_link: 1
