--- a/composer.json
+++ b/composer.json
@@ -35,20 +35,20 @@
     "drupal/components": "^1.0",
     "drupal/config_devel": "^1.2",
     "drupal/config_direct_save": "^1.0",
-    "drupal/config_filter": "^1.4.0",
-    "drupal/config_ignore": "^2.1",
+    "drupal/config_filter": "^2.0",
+    "drupal/config_ignore": "^2.2",
     "drupal/config_split": "^1.4",
     "drupal/config_update": "^1.5",
-    "drupal/console": "^1.8.0",
-    "drupal/console-core": "^1.8.0",
+    "drupal/console": "^1.9",
+    "drupal/console-core": "^1.9",
     "drupal/core": "^8.9",
     "drupal/core-composer-scaffold": "^8.9",
     "drupal/core-project-message": "^8.8",
     "drupal/core-recommended": "^8.9",
     "drupal/crop": "^2.0",
     "drupal/ctools": "^3.0@alpha",
-    "drupal/default_content": "^1.0.0@alpha",
-    "drupal/devel": "^2.0",
+    "drupal/default_content": "^2.0",
+    "drupal/devel": "^4.0",
     "drupal/easy_breadcrumb": "^1.6",
     "drupal/entity": "^1.0.0-rc1",
     "drupal/entity_browser": "^2.0.0",
@@ -95,6 +95,7 @@
     "drush/drush": "^10",
     "electriccitizen/docksal": "^1.5",
     "geerlingguy/drupal-vm": "^4.7",
+    "kint-php/kint-twig": "^2.0",
     "rvtraveller/qs-composer-installer": "^1.1",
     "webflo/drupal-finder": "^1.0"
   },
