--- a/web/themes/citizen_patterns/citizen_patterns.breakpoints.yml
+++ b/web/themes/citizen_patterns/citizen_patterns.breakpoints.yml
@@ -6,30 +6,33 @@ citizen_patterns.mobile:
     - 1x
     - 1.5x
     - 2x
-citizen_patterns.tablet:
-  label: Tablet
-  mediaQuery: '(min-width:500px)'
+citizen_patterns.smalltab:
+  label: Small Tablet
+  mediaQuery: '(min-width:496px)'
   weight: 1
+  multipliers:
+    - 1x
+    - 1.5x
+    - 2x
+citizen_patterns.tablet:
+  label: tablet
+  mediaQuery: '(min-width:896px)'
+  weight: 2
   multipliers:
     - 1x
     - 1.5x
     - 2x
 citizen_patterns.desk:
   label: Desk
-  mediaQuery: '(min-width:760px)'
+  mediaQuery: '(min-width:1200px)'
   weight: 2
   multipliers:
     - 1x
-citizen_patterns.middesk:
-  label: Mid Desk
-  mediaQuery: '(min-width:1000px)'
-  weight: 3
+citizen_patterns.largedesk:
+  label: Large Desk
+  mediaQuery: '(min-width:1560px)'
+  weight: 2
   multipliers:
     - 1x
-citizen_patterns.bigdesk:
-  label: Big Desk
-  mediaQuery: '(min-width:1400px)'
-  weight: 4
-  multipliers:
-    - 1x
+
 
