--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,6 @@
     "drupal/antibot": "^1.2",
     "drupal/auto_entitylabel": "^3.0@beta",
     "drupal/components": "^1.0",
-    "drupal/config_devel": "^1.2",
     "drupal/config_direct_save": "^1.0",
     "drupal/config_filter": "^2.0",
     "drupal/config_ignore": "^2.2",
@@ -67,11 +66,8 @@
     "drupal/layout_builder_restrictions": "^2.2",
     "drupal/libraries": "^3.0@alpha",
     "drupal/linkit": "^4.3",
-    "drupal/media_entity": "^2.0",
     "drupal/media_entity_actions": "^1.0@alpha",
-    "drupal/media_entity_document": "^1.1",
     "drupal/media_entity_generic": "^1.0@alpha",
-    "drupal/media_entity_image": "^1.2",
     "drupal/menu_block": "^1.4",
     "drupal/metatag": "^1.0",
     "drupal/paragraphs": "^1.8",
@@ -86,6 +82,7 @@
     "drupal/superfish": "~1",
     "drupal/token": "^1.5",
     "drupal/twig_tweak": "^2.0",
+    "drupal/upgrade_status": "^2.10",
     "drupal/video_embed_field": "^2.0",
     "drupal/video_embed_media": "^2.0",
     "drupal/views_bulk_operations": "^3.2",
