--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -60,7 +60,6 @@ module:
   link: 0
   linkit: 0
   media: 0
-  media_entity_actions: 0
   media_entity_generic: 0
   menu_block: 0
   menu_ui: 0
@@ -85,7 +84,6 @@ module:
   search_api_db: 0
   serialization: 0
   shortcut: 0
-  structure_sync: 0
   superfish: 0
   system: 0
   taxonomy: 0
@@ -95,6 +93,8 @@ module:
   toolbar: 0
   tour: 0
   twig_tweak: 0
+  update: 0
+  upgrade_status: 0
   user: 0
   video_embed_field: 0
   video_embed_media: 0
