Update linkit to 5.0 beta and reset for wysiwyg

--- a/composer.json
+++ b/composer.json
@@ -65,8 +65,7 @@
     "drupal/inline_entity_form": "^1.0@beta",
     "drupal/layout_builder_restrictions": "^2.2",
     "drupal/libraries": "^3.0@alpha",
-    "drupal/linkit": "^4.3",
-    "drupal/media_entity_actions": "^1.0@alpha",
+    "drupal/linkit": "5.0-beta11",
     "drupal/media_entity_generic": "^1.0@alpha",
     "drupal/menu_block": "^1.4",
     "drupal/metatag": "^1.0",
@@ -78,7 +77,6 @@
     "drupal/responsive_preview": "^1.0@beta",
     "drupal/search_api": "^1.10",
     "drupal/stage_file_proxy": "^1.0@alpha",
-    "drupal/structure_sync": "^1.14",
     "drupal/superfish": "~1",
     "drupal/token": "^1.5",
     "drupal/twig_tweak": "^2.0",
