--- a/config/sync/editor.editor.basic_html.yml
+++ b/config/sync/editor.editor.basic_html.yml
@@ -43,7 +43,7 @@ settings:
           items:
             - Table
             - HorizontalRule
-            - Linkit
+            - DrupalLink
             - DrupalUnlink
             - Maximize
         -
@@ -72,10 +72,11 @@ settings:
   plugins:
     stylescombo:
       styles: "mark|Highlight\r\ndiv.warning|Warning\r\nsmall|Small\r\ndiv.button|Button"
+    drupallink:
+      linkit_enabled: true
+      linkit_profile: wysiwyg
     language:
       language_list: un
-    linkit:
-      linkit_profile: wysiwyg
 image_upload:
   status: true
   scheme: public
