--- a/web/profiles/citizen/citizen.info.yml
+++ b/web/profiles/citizen/citizen.info.yml
@@ -3,6 +3,7 @@ type: profile
 description: 'Pre-configured install for Electric Citizen site builds.'
 version: 1.0
 core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - addanother
   - addtoany
