--- a/web/modules/custom/citizen_preview/citizen_preview.info.yml
+++ b/web/modules/custom/citizen_preview/citizen_preview.info.yml
@@ -3,6 +3,7 @@ description: Citizen Preview Overrides
 type: module
 package: Custom
 core: '8.x'
+core_version_requirement: ^8 || ^9
 
 dependencies:
   - responsive_preview:responsive_preview
