--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -44,7 +44,7 @@ settings:
           items:
             - Table
             - HorizontalRule
-            - Linkit
+            - DrupalLink
             - DrupalUnlink
             - Maximize
         -
@@ -75,7 +75,8 @@ settings:
       language_list: un
     stylescombo:
       styles: "span.highlight|Highlight\r\ndiv.warning|Warning\r\nsmall|Small\r\ndiv.button|Button"
-    linkit:
+    drupallink:
+      linkit_enabled: true
       linkit_profile: wysiwyg
 image_upload:
   status: true
