--- a/config/sync/views.view.site_search.yml
+++ b/config/sync/views.view.site_search.yml
@@ -284,18 +284,7 @@ display:
             label: ''
           plugin_id: search_api
       title: 'Site Search'
-      header:
-        area_text_custom:
-          id: area_text_custom
-          table: views
-          field: area_text_custom
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: false
-          tokenize: false
-          content: '<h2 class="results-header">Search Results</h2>'
-          plugin_id: text_custom
+      header: {  }
       footer:
         result:
           id: result
@@ -331,8 +320,10 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'user.node_grants:view'
       tags:
         - 'config:field.storage.node.body'
+        - 'config:search_api.index.nodes'
   search_results:
     display_plugin: page
     id: search_results
@@ -350,5 +341,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'user.node_grants:view'
       tags:
         - 'config:field.storage.node.body'
+        - 'config:search_api.index.nodes'
