--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-quote/pl-quote.yml
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-quote/pl-quote.yml
@@ -3,6 +3,8 @@ type:
 widgetTitle:
   'Quotes with optional source'
 
+image:
+  'http://placeimg.com/300/300/people'
 quote: |
   <p>Quis Aristidem non mortuum diligit? Nummus in Croesi divitiis obscuratur, pars est tamen.</p>
 source:
