--- a/config/sync/core.entity_form_display.paragraph.pullquote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.pullquote.default.yml
@@ -3,10 +3,15 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_form_mode.media.background_image
+    - field.field.paragraph.pullquote.field_image
     - field.field.paragraph.pullquote.field_quote
     - field.field.paragraph.pullquote.field_source
     - field.field.paragraph.pullquote.field_widget_title
     - paragraphs.paragraphs_type.pullquote
+  module:
+    - entity_browser_entity_form
+    - inline_entity_form
 _core:
   default_config_hash: MPJiAxiNaNSVbBOCwghZFRP9vyOkIt4aovJkmldUqZg
 id: paragraph.pullquote.default
@@ -14,8 +19,27 @@ targetEntityType: paragraph
 bundle: pullquote
 mode: default
 content:
-  field_quote:
+  field_image:
     weight: 1
+    settings:
+      form_mode: background_image
+      label_singular: ''
+      label_plural: ''
+      allow_new: true
+      allow_existing: true
+      match_operator: CONTAINS
+      revision: false
+      override_labels: false
+      collapsible: false
+      collapsed: false
+      allow_duplicate: false
+    third_party_settings:
+      entity_browser_entity_form:
+        entity_browser_id: image_browser
+    type: inline_entity_form_complex
+    region: content
+  field_quote:
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -23,7 +47,7 @@ content:
     type: string_textarea
     region: content
   field_source:
-    weight: 2
+    weight: 3
     settings:
       size: 60
       placeholder: ''
