--- a/web/themes/citizen_patterns/package.json
+++ b/web/themes/citizen_patterns/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "gulp-rename": "^1.4.0",
     "natives": "^1.1.6",
+    "node-normalize-scss": "^8.0.1",
     "pa11y": "^5.1.0",
     "postcss": "^7.0.7",
     "postcss-scss": "^2.0.0"
