--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -60,6 +60,7 @@ module:
   link: 0
   linkit: 0
   media: 0
+  media_entity_actions: 0
   media_entity_generic: 0
   menu_block: 0
   menu_ui: 0
@@ -80,6 +81,7 @@ module:
   redirect: 0
   responsive_image: 0
   responsive_preview: 0
+  role_delegation: 0
   search_api: 0
   search_api_db: 0
   serialization: 0
