--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "drupal/addanother": "^1.0@RC",
     "drupal/addtoany": "~1",
     "drupal/admin_toolbar": "^2.0",
+    "drupal/allowed_formats": "^1.3",
     "drupal/antibot": "^1.2",
     "drupal/auto_entitylabel": "^3.0@beta",
     "drupal/components": "2.0-beta3",
