--- a/config/sync/field.field.node.blog.body.yml
+++ b/config/sync/field.field.node.blog.body.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.node.body
     - node.type.blog
   module:
+    - allowed_formats
     - text
+third_party_settings:
+  allowed_formats:
+    basic_html: basic_html
+    limited_html: '0'
+    restricted_html: '0'
+    plain_text: '0'
 _core:
   default_config_hash: 2J2ieB6u00ahEtCVS1Zw5J2Wdt6rNytLmoV5ltIkg9Q
 id: node.blog.body
