--- a/config/sync/field.field.node.event.body.yml
+++ b/config/sync/field.field.node.event.body.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.node.body
     - node.type.event
   module:
+    - allowed_formats
     - text
+third_party_settings:
+  allowed_formats:
+    basic_html: basic_html
+    limited_html: '0'
+    restricted_html: '0'
+    plain_text: '0'
 _core:
   default_config_hash: qpTi-EOw6bkTgELEU--jZ6P_ixPm8MZZRYHoPJizUMk
 id: node.event.body
