--- a/config/sync/field.field.node.profiles.body.yml
+++ b/config/sync/field.field.node.profiles.body.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.node.body
     - node.type.profiles
   module:
+    - allowed_formats
     - text
+third_party_settings:
+  allowed_formats:
+    basic_html: basic_html
+    limited_html: '0'
+    restricted_html: '0'
+    plain_text: '0'
 _core:
   default_config_hash: FbvxJVzLZEh1Vg7BFgOIpC8E5kutC5nP_Y0sJamSgMU
 id: node.profiles.body
