--- a/config/sync/field.field.node.support_book.body.yml
+++ b/config/sync/field.field.node.support_book.body.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.node.body
     - node.type.support_book
   module:
+    - allowed_formats
     - text
+third_party_settings:
+  allowed_formats:
+    basic_html: basic_html
+    limited_html: '0'
+    restricted_html: '0'
+    plain_text: '0'
 _core:
   default_config_hash: yMbjwXbA3349GOP0QcE-ZCFU5SW2Jcme4n4KCQf1uC0
 id: node.support_book.body
