--- a/config/sync/field.field.paragraph.basic_page_section.field_section_intro.yml
+++ b/config/sync/field.field.paragraph.basic_page_section.field_section_intro.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.paragraph.field_section_intro
     - paragraphs.paragraphs_type.basic_page_section
   module:
+    - allowed_formats
     - text
+third_party_settings:
+  allowed_formats:
+    limited_html: limited_html
+    basic_html: '0'
+    restricted_html: '0'
+    plain_text: '0'
 id: paragraph.basic_page_section.field_section_intro
 field_name: field_section_intro
 entity_type: paragraph
