--- a/config/sync/field.field.paragraph.text.field_long_text.yml
+++ b/config/sync/field.field.paragraph.text.field_long_text.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.paragraph.field_long_text
     - paragraphs.paragraphs_type.text
   module:
+    - allowed_formats
     - text
+third_party_settings:
+  allowed_formats:
+    basic_html: basic_html
+    limited_html: '0'
+    restricted_html: '0'
+    plain_text: '0'
 id: paragraph.text.field_long_text
 field_name: field_long_text
 entity_type: paragraph
