--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -14,6 +14,7 @@ permissions:
   - 'access site-wide contact form'
   - 'display eu cookie compliance popup'
   - 'search content'
+  - 'use text format limited_html'
   - 'use text format restricted_html'
   - 'view disqus comments'
   - 'view media'
